--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.6",
     "axios": "^1.5.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
