--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@giphy/js-fetch-api": "^5.2.0",
+    "@giphy/react-components": "^9.0.1",
     "@reduxjs/toolkit": "^1.9.6",
     "axios": "^1.5.0",
     "dotenv": "^16.3.1",
