Add TailwindCSS and dependencies

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "webpack-dev-server --mode development --open --hot",
     "build": "webpack --mode production",
+    "build:css": "postcss src/css/styles.css -o dist/styles.css",
     "lint": "eslint .",
     "lint:fix": "eslint --fix",
     "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc"
@@ -17,9 +18,12 @@
     "@giphy/js-fetch-api": "^5.2.0",
     "@giphy/react-components": "^9.0.1",
     "@reduxjs/toolkit": "^1.9.6",
+    "autoprefixer": "^10.4.16",
     "axios": "^1.5.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "postcss-cli": "^10.1.0",
+    "postcss-preset-env": "^9.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
@@ -46,7 +50,7 @@
     "eslint-plugin-react": "^7.33.2",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.3",
-    "postcss": "^8.4.30",
+    "postcss": "^8.4.31",
     "postcss-loader": "^7.3.3",
     "prettier": "^3.0.3",
     "style-loader": "^3.3.3",
